syntax = "proto3";

package protobench;

import "google/protobuf/timestamp.proto";
import "gogo.proto";

option go_package = "github.com/schattian/protobench/def";

message Message {
  string name = 1;
  int64 birthDay = 2;
  string phone = 3;
  int32 siblings = 4;
  bool spouse = 5;
  double money = 6;
  Type type = 7;
  oneof values {
    string value_s = 8;
    int32 value_i = 9;
    double value_d = 10;
  }
  Book book = 11;
  google.protobuf.Timestamp ts = 12 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

enum Type {
  TYPE_UNSPECIFIED = 0;
  TYPE_R = 1;
  TYPE_S = 2;
}

message Book {
  string random_reader = 1;
  repeated string readers = 2;
  Author Author = 3;
}

message Author {
  string name = 1;
  string last_name = 2;
  int32 age = 3;
  int64 random_num = 4;
}
